adiciona página de listagem de diárias no admin

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -130,6 +130,23 @@
                 </li>
               </ul>
             </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <em class="nav-icon fas fa-clipboard-list"></em>
+                <p>
+                  Diárias
+                  <em class="fas fa-angle-left right"></em>
+                </p>
+              </a>
+              <ul class="nav nav-treeview">
+                <li class="nav-item">
+                  <a class="nav-link" asp-controller="Diaria" asp-action="Index">
+                    <em class="fas fa-table nav-icon"></em>
+                    <p>Listar</p>
+                  </a>
+                </li>
+              </ul>
+            </li>
           </ul>
         </nav>
         <!-- /.sidebar-menu -->
