--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using EDiaristas.Admin.Servicos.Dtos
 @using EDiaristas.Admin.Usuarios.Dtos
 @using EDiaristas.Admin.Auth.Dtos
+@using EDiaristas.Admin.Diarias.Dtos
 @using EDiaristas.Admin.Common.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
