--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using EDiaristas.Admin.Auth.Dtos
 @using EDiaristas.Admin.Diarias.Dtos
 @using EDiaristas.Admin.Common.Extensions
+@using EDiaristas.Admin.Common.Routes
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
