--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using EDiaristas.Admin.Diarias.Dtos
 @using EDiaristas.Admin.Common.Extensions
 @using EDiaristas.Admin.Common.Routes
+@using EDiaristas.Core.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
