--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using EDiaristas.Admin.Usuarios.Dtos
 @using EDiaristas.Admin.Auth.Dtos
 @using EDiaristas.Admin.Diarias.Dtos
+@using EDiaristas.Admin.ResetSenha.Dtos
 @using EDiaristas.Admin.Common.Extensions
 @using EDiaristas.Admin.Common.Routes
 @using EDiaristas.Core.Models
