--- a/Views/Servico/Index.cshtml
+++ b/Views/Servico/Index.cshtml
@@ -40,14 +40,14 @@
                   <td>
                     <a
                       class="btn btn-sm btn-warning"
-                      asp-route="@AdminRoutes.Servicos.UpdateByIdName"
+                      asp-route="@AdminRoutes.Servicos.UpdateByIdName" asp-route-id="@servico.Id"
                     >
                       Editar
                     </a>
                     <a
                       class="btn btn-sm btn-danger"
                       onclick="return confirm('Tem certeja que deseja excluir este serviço?')"
-                      asp-route="@AdminRoutes.Servicos.DeleteByIdName"
+                      asp-route="@AdminRoutes.Servicos.DeleteByIdName" asp-route-id="@servico.Id"
                     >
                       Excluir
                     </a>
